@@ -109,12 +109,20 @@ OPTIMIZATIONS  = $(OPTIMIZATIONS) -Gs
 OPTIMIZATIONS  = $(OPTIMIZATIONS) -GS
 !endif
 
+!if [nmakehlp -c -GL]
+OPTIMIZATIONS  = $(OPTIMIZATIONS) -GL
+!endif
+
 DEBUGFLAGS     =
 
 !if [nmakehlp -c -RTC1]
 DEBUGFLAGS     = $(DEBUGFLAGS) -RTC1
 !elseif [nmakehlp -c -GZ]
 DEBUGFLAGS     = $(DEBUGFLAGS) -GZ
+!endif
+
+!if [nmakehlp -c -RTCc]
+DEBUGFLAGS     = $(DEBUGFLAGS) -RTCc
 !endif
 
 COMPILERFLAGS  =-W3
@@ -154,6 +162,12 @@ ALIGN98_HACK	= 0
 !endif
 !else
 ALIGN98_HACK	= 0
+!endif
+
+LINKERFLAGS     =
+
+!if [nmakehlp -l -ltcg]
+LINKERFLAGS     =-ltcg
 !endif
 
 #----------------------------------------------------------
@@ -509,6 +523,8 @@ TCLTOOLSDIR	= $(_TCLDIR)\tools
 !message *** Output directory will be '$(OUT_DIR)'
 !message *** Suffix for binaries will be '$(SUFX)'
 !message *** Optional defines are '$(OPTDEFINES)'
-!message *** Compiler version $(VCVER) options are '$(OPTIMIZATIONS) $(DEBUGFLAGS)'
+!message *** Compiler version $(VCVER)
+!message *** Compiler options '$(OPTIMIZATIONS) $(DEBUGFLAGS)'
+!message *** Link options '$(LINKERFLAGS)'
 
 !endif
